--- a/TS compiler/index.html
+++ b/TS compiler/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Understanding TypeScript</title>
     <!-- Tenta importar um arquivo app.js o que nos permite visualizar as alterações direto no navegador -->
-    <script src="app.js" defer></script>
-    <script src="analytics.js" defer></script>
+    <script src="dist/app.js" defer></script>
+    <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-    
+    <button>Click me</button>
 </body>
 </html>
